# SEgene

./: .gitignore  CHANGELOG.md  CHANGELOG_ja.md  CITATION  README.md  README_ja.md
SE_to_gene_links/: README.md  README_ja.md  docker-compose.yml  environment.yml  pyproject.toml
SE_to_gene_links/docker/: Dockerfile
SE_to_gene_links/docker/startup/: 00-imports.py
SE_to_gene_links/notebooks/: tutorial_book.ipynb  tutorial_book_SE_rank_disribution.ipynb  tutorial_book_SE_rank_disribution_ja.ipynb  tutorial_book_ja.ipynb
SE_to_gene_links/src/SEgene_package/: dict_tools.py  graph_tools.py  jupyter_wrapper.py  networkx_tools.py  region_visualize_tools.py  tools.py
SEgene_analyzer/: .gitignore  LICENSE  MANIFEST.in  README.md  README_ja.md  pytest.ini  setup.py
SEgene_analyzer_erna/: .gitignore  README.md  README_ja.md  requirements.txt  setup.py
SEgene_common/: logging.py
SEgene_geneprep/: README.md  README_ja.md  geneprep.py  geneprep_utils.py
SEgene_peakprep/: README.md  README_ja.md  bigwig_README.md  bigwig_README_ja.md  bigwig_peakprep.py  bigwig_peakprep_bamconvert.py  bigwig_peakprep_bamdiff.py  bigwig_peakprep_bamdiff_generatediff.py  bigwig_peakprep_bamdiff_utils.py  bigwig_peakprep_summary.py  bigwig_peakprep_utils.py  cpm_README.md  cpm_README_ja.md  cpm_calcnorm_README.md  cpm_calcnorm_README_ja.md  cpm_peakprep.py  cpm_peakprep_calcnorm.py  cpm_peakprep_calcnorm_utils.py  cpm_peakprep_pipeline.py  cpm_peakprep_utils.py
SEgene_region_analyzer/: README.md  README_ja.md  run_batch_processor.py
cli_tools/: README.md  README_ja.md  bam_count.sh  (+8 more)
(+79 files in other folders)
